--- a/index.html
+++ b/index.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html lang="En">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./pages/style.css" />
+    <title>Castaway</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./pages/style.css" />
-  <title>Castaway</title>
+  <body>
+    <div class="page">
+      <header class="header">
+        <div class="header-container">
+          <img
+            src="./images/logo.svg"
+            alt="logo"
+            class="header-container_image"
+          />
+          <div class="header-container-contacts">
+            <ul class="header-container-contacts_list">
+              <li>
+                <a href="#" class="header-container-contacts_list__item">Home</a>
+              </li>
+              <li>
+                <a href="#" class="header-container-contacts_list__item">Episodes</a>
+              </li>
+              <li>
+                <a href="#"class="header-container-contacts_list__item">About</a>
+              </li>
+              <li><a href="#"class="header-container-contacts_list__item">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </header>
 
-</head>
-
-<body>
-<div class="page">
-    <header class="header">
-<div class="header-container">
-    <img src="./images/logo.svg" alt="logo" class="header-container_image">
-    <div class="header-container-contacts">
-        <ul class="header-container-contacts_list">
-            <li>Home</li>
-            <li>Episodes</li>
-            <li>About</li>
-            <li>Contact</li>
-        </ul>
-    </div>
-</div>
-    </header>
-
-    <main class="main">
+      <main class="main">
         <section class="cover">
-            <div class="cover-container">
-                <img src="./images/cover_img.png" alt="cover" class="cover-container_image">
-                <div class="cover-container_content">
-                    <h1 class="cover-header">Take your podcast to the next level</h1>
-                </div>
+          <div class="cover-container">
+            <img
+              src="./images/cover_img.png"
+              alt="cover"
+              class="cover-container_image"
+            />
+            <div class="cover-container_content">
+              <h1 class="cover-header">Take your podcast to the
+                <span class="cover-header_underline">next</span>
+                <span class="cover-header_bold">level</span>
+              </h1>
             </div>
+          </div>
         </section>
-    </main>
+      </main>
 
-
-
-
-
-    <footer class="footer">
-      
-    </footer>
-</div>
-</body>
-
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
