--- a/index.html
+++ b/index.html
@@ -47,8 +47,29 @@
                 <span class="cover-header_underline">next</span>
                 <span class="cover-header_bold">level</span>
               </h1>
+              <div class="cover-listen">
+                <p class="cover-listen_text">Listen on</p>
+                <ul class="cover-listen_buttons">
+                    <li class="cover-listen_button">
+                        <a href="#" class="cover-listen_button cover-listen_button__spotify" aria-label="Spotify"></a>
+                    </li>
+                    <li class="cover-listen_list">
+                        <a href="#" class="cover-listen_button cover-listen_button__red" aria-label="Red"></a>
+                    </li>
+                    <li class="cover-listen_button">
+                        <a href="#" class="cover-listen_button cover-listen_button__soundcloud" aria-label="Soundcloud"></a>
+                    </li>
+                    <li class="cover-listen_button">
+                        <a href="#" class="cover-listen_button cover-listen_button__podcast" aria-label="Podcast"></a>
+                    </li>
+                    <li class="cover-listen_button">
+                        <a href="#" class="cover-listen_button cover-listen_button__radio" aria-label="Radio"></a>
+                    </li>
+                </ul>
+            </div>
             </div>
           </div>
+        
         </section>
       </main>
 
