--- a/index.html
+++ b/index.html
@@ -20,15 +20,25 @@
           <div class="header-container-contacts">
             <ul class="header-container-contacts_list">
               <li>
-                <a href="#" class="header-container-contacts_list__item">Home</a>
+                <a href="#" class="header-container-contacts_list__item"
+                  >Home</a
+                >
               </li>
               <li>
-                <a href="#" class="header-container-contacts_list__item">Episodes</a>
+                <a href="#" class="header-container-contacts_list__item"
+                  >Episodes</a
+                >
               </li>
               <li>
-                <a href="#"class="header-container-contacts_list__item">About</a>
+                <a href="#" class="header-container-contacts_list__item"
+                  >About</a
+                >
               </li>
-              <li><a href="#"class="header-container-contacts_list__item">Contact</a></li>
+              <li>
+                <a href="#" class="header-container-contacts_list__item"
+                  >Contact</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -43,34 +53,120 @@
               class="cover-container_image"
             />
             <div class="cover-container_content">
-              <h1 class="cover-header">Take your podcast to the
+              <h1 class="cover-header">
+                Take your podcast to the
                 <span class="cover-header_underline">next</span>
                 <span class="cover-header_bold">level</span>
               </h1>
               <div class="cover-listen">
                 <p class="cover-listen_text">Listen on</p>
                 <ul class="cover-listen_buttons">
-                    <li class="cover-listen_button">
-                        <a href="#" class="cover-listen_button cover-listen_button__spotify" aria-label="Spotify"></a>
-                    </li>
-                    <li class="cover-listen_list">
-                        <a href="#" class="cover-listen_button cover-listen_button__red" aria-label="Red"></a>
-                    </li>
-                    <li class="cover-listen_button">
-                        <a href="#" class="cover-listen_button cover-listen_button__soundcloud" aria-label="Soundcloud"></a>
-                    </li>
-                    <li class="cover-listen_button">
-                        <a href="#" class="cover-listen_button cover-listen_button__podcast" aria-label="Podcast"></a>
-                    </li>
-                    <li class="cover-listen_button">
-                        <a href="#" class="cover-listen_button cover-listen_button__radio" aria-label="Radio"></a>
-                    </li>
+                  <li class="cover-listen_button">
+                    <a
+                      href="#"
+                      class="cover-listen_buttoncover-listen_button__spotify"
+                      aria-label="Spotify"
+                    ></a>
+                  </li>
+                  <li class="cover-listen_list">
+                    <a
+                      href="#"
+                      class="cover-listen_button cover-listen_button__red"
+                      aria-label="Red"
+                    ></a>
+                  </li>
+                  <li class="cover-listen_button">
+                    <a
+                      href="#"
+                      class="cover-listen_button cover-listen_button__soundcloud"
+                      aria-label="Soundcloud"
+                    ></a>
+                  </li>
+                  <li class="cover-listen_button">
+                    <a
+                      href="#"
+                      class="cover-listen_button cover-listen_button__podcast"
+                      aria-label="Podcast"
+                    ></a>
+                  </li>
+                  <li class="cover-listen_button">
+                    <a
+                      href="#"
+                      class="cover-listen_button cover-listen_button__radio"
+                      aria-label="Radio"
+                    ></a>
+                  </li>
                 </ul>
-            </div>
+              </div>
             </div>
           </div>
-        
         </section>
+
+        <section class="episodes">
+          <div class="episodes_container">
+            <div class="episodes_container__header">
+              <h2 class="episodes_header">Latest episodes</h2>
+              <button class="episodes_button">View all episodes</button>
+            </div>
+            <ul class="episodes_container__cards">
+              <li class="episodes_card">
+                <div class="card">
+                  <img src="./images/card1.png" alt="" class="card_image" />
+                  <div class="card_content">
+                    <button class="card_button">Gear</button>
+                    <p class="card_p">Episode 3</p>
+                    <h3 class="card_header">Should you get outboard audio gear?</h3>
+                    <p class="card_p2">Is hardware really worth it when it comes to podcasting? The answer is...it depends. Here’s our reasons on why you might want to consider picking something up.</p>
+                    <button class="card_button2">View Episode Details</button>
+                  </div>
+                </div>
+              </li>
+
+              <li class="episodes_card">
+                <div class="card">
+                  <img src="./images/card2.png" alt="" class="card_image" />
+                  <div class="card_content">
+                    <button class="card_button">Tips & Tricks</button>
+                    <p class="card_p">Episode 2</p>
+                    <h3 class="card_header">Mic tricks to take you to the next level</h3>
+                    <p class="card_p2">Stop rolling with those default settings on your mic. These small tweaks will take you from sounding good to great.</p>
+                    <button class="card_button2">View Episode Details</button>
+                  </div>
+                </div>
+              </li>
+              <li class="episodes_card">
+                <div class="card">
+                  <img src="./images/card3.png" alt="" class="card_image" />
+                  <div class="card_content">
+                    <button class="card_button">Gear</button>
+                    <p class="card_p">Episode 1</p>
+                    <h3 class="card_header card_header_little">The best microphone under $200</h3>
+                    <p class="card_p2">With so many microphones on the market, how are you supposed to know what’s the best? Take a look at our top picks.</p>
+                    <button class="card_button2">View Episode Details</button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="cover">
+            <div class="cover-container">
+              <div class="cover-container_content">
+                <h1 class="cover-header">
+                  Take your podcast to the
+                  <span class="cover-header_underline">next</span>
+                  <span class="cover-header_bold">level</span>
+                </h1>
+              </div>
+              <img
+                src="./images/cover_img.png"
+                alt="cover"
+                class="cover-container_image"
+              />
+            </div>
+          </section>
+
       </main>
 
       <footer class="footer"></footer>
