--- a/index.html
+++ b/index.html
@@ -115,8 +115,14 @@
                   <div class="card_content">
                     <button class="card_button">Gear</button>
                     <p class="card_p">Episode 3</p>
-                    <h3 class="card_header">Should you get outboard audio gear?</h3>
-                    <p class="card_p2">Is hardware really worth it when it comes to podcasting? The answer is...it depends. Here’s our reasons on why you might want to consider picking something up.</p>
+                    <h3 class="card_header">
+                      Should you get outboard audio gear?
+                    </h3>
+                    <p class="card_p2">
+                      Is hardware really worth it when it comes to podcasting?
+                      The answer is...it depends. Here’s our reasons on why you
+                      might want to consider picking something up.
+                    </p>
                     <button class="card_button2">View Episode Details</button>
                   </div>
                 </div>
@@ -128,8 +134,14 @@
                   <div class="card_content">
                     <button class="card_button">Tips & Tricks</button>
                     <p class="card_p">Episode 2</p>
-                    <h3 class="card_header">Mic tricks to take you to the next level</h3>
-                    <p class="card_p2">Stop rolling with those default settings on your mic. These small tweaks will take you from sounding good to great.</p>
+                    <h3 class="card_header">
+                      Mic tricks to take you to the next level
+                    </h3>
+                    <p class="card_p2">
+                      Stop rolling with those default settings on your mic.
+                      These small tweaks will take you from sounding good to
+                      great.
+                    </p>
                     <button class="card_button2">View Episode Details</button>
                   </div>
                 </div>
@@ -140,8 +152,14 @@
                   <div class="card_content">
                     <button class="card_button">Gear</button>
                     <p class="card_p">Episode 1</p>
-                    <h3 class="card_header card_header_little">The best microphone under $200</h3>
-                    <p class="card_p2">With so many microphones on the market, how are you supposed to know what’s the best? Take a look at our top picks.</p>
+                    <h3 class="card_header card_header_little">
+                      The best microphone under $200
+                    </h3>
+                    <p class="card_p2">
+                      With so many microphones on the market, how are you
+                      supposed to know what’s the best? Take a look at our top
+                      picks.
+                    </p>
                     <button class="card_button2">View Episode Details</button>
                   </div>
                 </div>
@@ -150,23 +168,46 @@
           </div>
         </section>
 
-        <section class="cover">
-            <div class="cover-container">
-              <div class="cover-container_content">
-                <h1 class="cover-header">
-                  Take your podcast to the
-                  <span class="cover-header_underline">next</span>
-                  <span class="cover-header_bold">level</span>
-                </h1>
-              </div>
-              <img
-                src="./images/cover_img.png"
-                alt="cover"
-                class="cover-container_image"
-              />
+        <section class="hero">
+          <div class="hero-container">
+            <div class="hero-container_content">
+              <img src="./images/Frame.png" class="hero_frame" alt="frame" />
+              <p class="hero_p">Meet your host</p>
+              <h3 class="hero_header">Jacob Paulaner</h3>
+              <p class="hero_p2">
+                Jacob has a background in audio engineering, and has been
+                podcasting since the early days.
+              </p>
+              <p class="hero_p3">
+                He’s here to help you level up your game by sharing everything
+                he’s learned along the way.
+              </p>
             </div>
-          </section>
-
+            <img
+              src="./images/hero.png"
+              alt="hero"
+              class="hero-container_image"
+            />
+          </div>
+          <div class="hero_subscribe">
+            <div class="hero_card">
+              <div class="hero_content">
+                <p class="hero_p4">Email Newsletter</p>
+                <h3 class="hero_header_card">Subscribe for updates</h3>
+              </div>
+              <div class="hero_form">
+                <form class="hero_form_class" method="get">
+                      <input class="name_form" type="text" name="name" id="name" placeholder="Name">
+                      <input class="email_form"type="email" name="email" id="email" placeholder="Email">
+                    <button class="hero_button">Submit</button>
+                  </form>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="reviews">
+            <div class=""
+        </section>
       </main>
 
       <footer class="footer"></footer>
