--- a/index.html
+++ b/index.html
@@ -206,7 +206,76 @@
           </div>
         </section>
         <section class="reviews">
-            <div class=""
+            <div class="reviews_container">
+                <ul class="reviews_cards">
+                    <li class="review_card">
+<div class="reviews_stars">
+    <img src="./images/star.svg" class="image_star" alt="star">
+    <img src="./images/star.svg" class="image_star" alt="star">
+    <img src="./images/star.svg" class="image_star" alt="star">
+    <img src="./images/star.svg" class="image_star" alt="star">
+    <img src="./images/star.svg" class="image_star" alt="star">
+</div>
+<h4 class="reviews_header">I can’t recommend this podcast enough</h4>
+<p class="reviews_author">Betty Lacey</p>
+                    </li>
+                    <li class="review_card">
+                        <div class="reviews_stars">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                        </div>
+                        <h4 class="reviews_header">Jacob is the best in the business</h4>
+                        <p class="reviews_author">Adam Driver</p>
+                    </li>
+                    <li class="review_card">
+                        <div class="reviews_stars">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                        </div>
+                        <h4 class="reviews_header">A wealth of audio knowledge</h4>
+                        <p class="reviews_author">Marcus Brown</p>
+                    </li>
+                    <li class="review_card">
+                        <div class="reviews_stars">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                        </div>
+                        <h4 class="reviews_header">Every episode is a gem!</h4>
+                        <p class="reviews_author">Jessica Knowl</p>
+                    </li>
+                    <li class="review_card">
+                        <div class="reviews_stars">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                        </div>
+                        <h4 class="reviews_header">Whoa whoa, let me take some notes!</h4>
+                        <p class="reviews_author">Betty Lacey</p>
+                    </li>
+                    <li class="review_card">
+                        <div class="reviews_stars">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                            <img src="./images/star.svg" class="image_star" alt="star">
+                        </div>
+                        <h4 class="reviews_header">I’ve upped my game considerably since I started listening</h4>
+                        <p class="reviews_author">Steven Blast</p>
+                    </li>
+                </ul>
+            </div>
         </section>
       </main>
 
